# 2D-TopDown-Shooter

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
include/: Collision.h  DestroyedParts.h  Enemy.h  Game.h  GameObject.h  ObjectSpawner.h  Player.h  Projectile.h  ShipParts.h  Vector.h
src/: Collision.cpp  DestroyedParts.cpp  Enemy.cpp  Game.cpp  GameObject.cpp  Main.cpp  ObjectSpawner.cpp  Player.cpp  Projectile.cpp  ShipParts.cpp  TextureManager.cpp  Vector.cpp
